RangeIndexEvaluator build index algorithm changed. IntervalMap was removed. DoubleRangeAdaptor/IntRangeAdaptor/DecisionTableValidator are singletons. Small improvements with using LOG.